# models/permissions.go
@@ -7,18 +7,16 @@ import (
 	"github.com/google/uuid"
 )
 
-// Module represents a module in the system
-type Module struct {
-	base.Model `swaggerignore:"true"`
-	ModuleID   uuid.UUID `gorm:"type:uuid;default:uuid_generate_v4();primaryKey;unique" json:"module_id"`
-	Name       string    `gorm:"unique;not null" json:"name"`
-}
-
 // Permission represents a permission for a module in the system
 type Permission struct {
 	base.Model   `swaggerignore:"true"`
 	PermissionID uuid.UUID `gorm:"type:uuid;default:uuid_generate_v4();primaryKey;unique" json:"permission_id"`
-	Name         string    `gorm:"not null" json:"name"`
-	ModuleID     uuid.UUID `json:"module_id"`
-	Module       Module    `gorm:"foreignKey:ModuleID;references:ModuleID"`
+	Code         string    `gorm:"unique;not null" json:"code"`
+	Action       string    `gorm:"not null" json:"action"`
+	Module       string    `gorm:"not null" json:"module"`
+}
+
+// TableName sets custom table name for Permission model
+func (Permission) TableName() string {
+	return "permissions"
 }
