# modules/auth/route/routes.go
@@ -2,7 +2,7 @@
 package route
 
 import (
-	"e-commerce/middleware/auth"
+	"e-commerce/middleware/authentication"
 	authHandler "e-commerce/modules/auth/handler"
 
 	"github.com/gin-gonic/gin"
@@ -12,14 +12,14 @@ import (
 func AuthRoutes(router *gin.RouterGroup) {
 	handler := authHandler.NewUserHandler()
 
-	router.POST(auth.PublicRoute("/auth/login"), handler.Login)
+	router.POST(authentication.PublicRoute("/auth/login"), handler.Login)
 
 	router.DELETE("/auth/logout", handler.Logout)
 
-	router.POST(auth.PublicRoute("/auth/register"), handler.AddUser)
+	router.POST(authentication.PublicRoute("/auth/register"), handler.AddUser)
 
-	router.POST(auth.PublicRoute("/auth/verification"), handler.VerifyEmail)
+	router.POST(authentication.PublicRoute("/auth/verification"), handler.VerifyEmail)
 
-	router.POST(auth.PublicRoute("/auth/resend-verification"), handler.ResendVerificationCode)
+	router.POST(authentication.PublicRoute("/auth/resend-verification"), handler.ResendVerificationCode)
 
 }
